--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&display=swap');
 body {
-  background: linear-gradient(180deg,#000000,#9E2A2A);
+  background: ciano;
   font-family: Arial, Helvetica, sans-serif ;
 }
 
